# solana_idl_parser

./: Cargo.toml  README.md
example/: Cargo.toml  config.example.toml
example/src/: config.rs  main.rs
idl/: idl.json
src/: generator.rs  lib.rs  parser.rs
