[package]
name = "solana_idl_parser"
description = "This repository consists of macro to parse Solana IDL into Rust structs"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
convert_case = "0.6"
