[package]
name = "pumpfun"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
borsh = "1.6.0"
clickhouse = { version = "0.14.1", features = ["rustls-tls", "chrono"] }
futures = "0.3.31"
rustls = { version = "0.23.36", features = ["ring"] }
serde = { version = "1.0.228", features = ["derive"] }
solana-account-decoder-client-types = "3.1.6"
solana-sdk = "3.0.0"
solana_idl_parser = { path = "../" }
solana-program = "3.0.0"
solana-transaction-context = "3.1.6"
solana-transaction-status = "3.1.6"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "fs"] }
toml = "0.9.11"
yellowstone-grpc-client = "10.2.0"
yellowstone-grpc-proto = { version = "10.1.1", default-features = false, features = [
    "plugin",
] }
